--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         <activity
             android:name=".activities.AddEditCategoryActivity"
             android:exported="false" />
+        <activity android:name=".activities.AddEditEsquiActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"/>
         <activity
             android:name=".activities.CategoryActivity"
             android:exported="true">
